--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     
     <!-- Todo generating here -->
     <div class="container">
-        <input class="form-control mt-5 w-50 mx-auto text-input" type="text" placeholder="Add Todo name..."  required autofocus="true">
+        <input class="form-control mt-5 w-50 mx-auto text-input" type="text" placeholder="What do you have planned?"  required autofocus="true">
         <ul class="todo-list w-50 mx-0 p-0 list-unstyled mx-auto mt-3"></ul>
     </div>
     
